option java_package = "com.pureland.common.protocal.vo";
option java_outer_classname = "ResourceTypeProtocal";

enum ResourceType
{
	None 				= 0;
    Gold 				= 1;
    Oil 				= 2;
    Diamond 			= 3;
    Medal 				= 4;  	//奖牌
    Number 				= 5; 	//特殊类型,升级兵时使用的单位个数
    RMB 				= 6;	//人民币
    GoldOrOil			= 7;	//二选一
    NewOil 				= 8; 	//新能源
}
